# coremark

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets example.json  coremark.md5
posix/: CMakeLists.txt  core_portme.h
riscv/: toolchain-riscv-linux.cmake
rv64-linux/: CMakeLists.txt  core_portme.h  core_portme.mak
